# RG2020

./: .gitignore  CMakeLists.txt  Navodila.md  README.md  imgui.ini
libs/imgui/: imgui_impl_opengl3.cpp
libs/stb_image/: stb_image.cpp
res/models/: flower_blue.mtl  flower_red.mtl  flower_yellow.mtl  rock_0.mtl  rock_1.mtl  shrub_0.mtl  tree_01.mtl  tree_1.mtl  tree_2.mtl  turret_00.mtl  turret_01.mtl  turret_single.mtl
res/shaders/: bunny_FS.glsl  bunny_VS.glsl  debug_depth_FS.glsl  debug_depth_VS.glsl  debug_normal_GS.glsl  debug_normal_VS.glsl  default2D_FS.glsl  default2D_VS.glsl  default3D_FS.glsl  default3D_VS.glsl  light_FS.glsl  light_VS.glsl  placement_FS.glsl  skybox_FS.glsl  skybox_VS.glsl  terrain_FS.glsl  terrain_VS.glsl  water_FS (copy).glsl  water_FS.glsl  water_VS (copy).glsl  water_VS.glsl  wavey_VS.glsl
src/: main.cpp
src/engine/: BoundingBox3D.h  Core.cpp  Core.h  ResourceManager.cpp  ResourceManager.h  SoundManager.cpp  SoundManager.h
src/engine/audio/: AudioMaster.h
src/engine/camera/: Camera.h  FirstPersonCamera.h  FirstPersonController.cpp  FirstPersonController.h  MouseCameraController.cpp  MouseCameraController.h  MousePicker.h  OrthographicCamera.h  PerspectiveCamera.h
src/engine/graphics/: BitmapFont.cpp  BitmapFont.h  Color.h  CubeMap.cpp  CubeMap.h  FrameBuffer.cpp  FrameBuffer.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Model.h  RawModel.h  Region2D.cpp  Region2D.h  Shader.cpp  Shader.h  Terrain.cpp  Terrain.h  Texture2D.cpp  Texture2D.h  UVRegion.h  Vertex2D.h
src/engine/input/: Events.h  Input.cpp  Input.h  KeyActions.h  Keycodes.h  MouseButtonCodes.h
src/engine/loader/: Loader.h  ObjLoader.cpp
src/engine/math/: Math.h  Matrix.h  MatrixMath.h  Vector.h  VectorMath.h
src/engine/renderer/: Renderer2D.cpp  Renderer2D.h
src/engine/rendering/: MasterRenderer.cpp  MasterRenderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RenderingCapabilities.h  Sprite.cpp  Sprite.h
src/engine/utils/: Hash.h  Noise.cpp  Noise.h  StringUtils.cpp  StringUtils.h
src/game/: Game.cpp  Game.h
src/game/entity/: Enemy.cpp  Enemy.h  Particle.cpp  Particle.h  Turret.cpp  Turret.h
src/game/screens/: GameScreen.cpp  GameScreen.h  InitScreens.cpp  MainMenuScreen.cpp  MainMenuScreen.h  Screen.h  TestScreen.cpp  TestScreen.h
src/game/ui/: GUI.cpp  GUI.h  PreviewTurret.cpp  PreviewTurret.h
src/tests/: BatchingTest.cpp  BatchingTest.h  BunnyMarkTest.cpp  BunnyMarkTest.h  Instancing2Test.cpp  Instancing2Test.h  InstancingTest.cpp  InstancingTest.h  TerrainTest.cpp  TerrainTest.h  Test.h
